--- a/homepage/index.hbs
+++ b/homepage/index.hbs
@@ -88,24 +88,39 @@
 
 <section>
     {{!-- Call to Action --}}
-    <div class="cta">
-        <div class="events-container">
-            <div class="event-banner">
-                <div class="banner"><a href=""><img src="/static/img/hero/2.png" alt=""></a></div>
-            </div>
+    <div class="cta container">
+        <div class="cta-title">
+            <h2>Events</h2>
         </div>
-        <div class="events-container">
-            <div class="event-card">
-                <div class="card"><a href=""><img src="/static/img/hero/3.png" alt=""></a></div>
+        <div class="cta-banners">
+            <div class="events-container">
+                <div class="event-banner">
+                    <div class="banner"><a href=""><img src="/static/img/hero/2.png" alt=""></a></div>
+                </div>
             </div>
-            <div class="event-card">
-                <div class="card"><a href=""><img src="/static/img/hero/4.png" alt=""></a></div>
-            </div>
-            <div class="event-card">
-                <div class="card"><a href=""><img src="/static/img/hero/5.png" alt=""></a></div>
-            </div>
-            <div class="event-card">
-                <div class="card"><a href=""><img src="/static/img/hero/6.png" alt=""></a></div>
+            <div class="events-container">
+                <div class="event-card">
+                    <div class="card"><a href=""><img src="/static/img/hero/3.png" alt=""></a></div>
+                </div>
+                <div class="event-card">
+                    <div class="card"><a href=""><img src="/static/img/hero/4.png" alt=""></a></div>
+                </div>
+                <div class="event-card">
+                    <div class="card"><a href=""><img src="/static/img/hero/5.png" alt=""></a></div>
+                </div>
+                <div class="event-card">
+                    <div class="card"><a href=""><img src="/static/img/hero/6.png" alt=""></a></div>
+                </div>
+                <div class="event-card">
+                    <div class="card"><a href=""><img src="/static/img/hero/6.png" alt=""></a></div>
+                </div>
+                <div class="event-card">
+                    <div class="card"><a href=""><img src="/static/img/hero/6.png" alt=""></a></div>
+                </div>
+                <div class="event-card">
+                    <div class="card"><a href=""><img src="/static/img/hero/6.png" alt=""></a></div>
+                </div>
+                <div class="event-card"></div>
             </div>
         </div>
     </div>
