Registration data validation

--- a/homepage/events.hbs
+++ b/homepage/events.hbs
@@ -19,13 +19,13 @@
 <section>
     <div class="events-container">
         <div class="event-card">
-            <div class="card"><a href="#"><img src="/static/img/thumb.png" alt=""></a></div>            
+            <div class="card"><a href="#dastan"><img src="/static/img/thumb.png" alt=""></a></div>            
             <h3>Event Title</h3>
             <h4>Subtitle</h4>
         </div>
 
         <div class="event-card">
-            <div class="card"><a href="#"><img src="/static/img/thumb.png" alt=""></a></div>            
+            <div class="card"><a href="#nerdwd"><img src="/static/img/thumb.png" alt=""></a></div>            
             <h3>Event Title</h3>
             <h4>Subtitle</h4>
         </div>
