--- a/homepage/index.hbs
+++ b/homepage/index.hbs
@@ -130,11 +130,11 @@
     {{!-- Slideshow of Title and Co-Sponsors --}}
     <div class="sponsors">
         <marquee behavior="scrolling" direction="left">
-            <img src="/static/img/sponsors/AN.png">
+            {{!-- <img src="/static/img/sponsors/AN.png">
             <img src="/static/img/sponsors/Capital.png">
             <img src="/static/img/sponsors/IEEE.png">
             <img src="/static/img/sponsors/IES.png">
-            <img src="/static/img/sponsors/ISM.png">
+            <img src="/static/img/sponsors/ISM.png"> --}}
         </marquee>
     </div>
 </section>
