--- a/homepage/events.hbs
+++ b/homepage/events.hbs
@@ -9,7 +9,7 @@
         <div class="event-banner">
             <div class="banner">
                 <a href="#hackhl">
-                    <img src="/static/img/thumb.png">
+                    <img src="/static/img/events/hackhl.png">
                 </a>
             </div>
         </div>
@@ -18,58 +18,197 @@
 
 <section>
     <div class="events-container">
+
         <div class="event-card">
-            <div class="card"><a href="#dastan"><img src="/static/img/thumb.png" alt=""></a></div>            
-            <h3>Event Title</h3>
-            <h4>Subtitle</h4>
+            <div class="card"><a href="#nerdwd"><img src="/static/img/events/nerdwd.png" alt="Nerd Words"></a></div>            
+            <h3>Competitive Coding</h3>
+            <h4>29,30 and 31 March</h4>
         </div>
 
         <div class="event-card">
-            <div class="card"><a href="#nerdwd"><img src="/static/img/thumb.png" alt=""></a></div>            
-            <h3>Event Title</h3>
-            <h4>Subtitle</h4>
+            <div class="card"><a href="#bfmaze"><img src="/static/img/events/bfmaze.png" alt="Blind Fold Maze"></a></div>            
+            <h3>Blind Fold Maze</h3>
+            <h4>30 and 31 March</h4>
         </div>
 
         <div class="event-card">
-            <div class="card"><a href="#"><img src="/static/img/thumb.png" alt=""></a></div>            
-            <h3>Event Title</h3>
-            <h4>Subtitle</h4>
+            <div class="card"><a href="#bridge"><img src="/static/img/events/bridge.png" alt="Bridge Follower"></a></div>            
+            <h3>Bridge Follower</h3>
+            <h4>29 March</h4>
         </div>
 
         <div class="event-card">
-            <div class="card"><a href="#"><img src="/static/img/thumb.png" alt=""></a></div>            
-            <h3>Event Title</h3>
-            <h4>Subtitle</h4>
+            <div class="card"><a href="#caddds"><img src="/static/img/events/caddds.png" alt="Cadd Designing"></a></div>            
+            <h3>Cadd Designing</h3>
+            <h4>30 March</h4>
         </div>
 
         <div class="event-card">
-            <div class="card"><a href="#"><img src="/static/img/thumb.png" alt=""></a></div>            
-            <h3>Event Title</h3>
-            <h4>Subtitle</h4>
+            <div class="card"><a href="#casino"><img src="/static/img/events/casino.png" alt="Hasino Ka Casino"></a></div>            
+            <h3>Hasiona Ka Casino</h3>
+            <h4>30 and 31 March</h4>
         </div>
 
         <div class="event-card">
-            <div class="card"><a href="#"><img src="/static/img/thumb.png" alt=""></a></div>            
-            <h3>Event Title</h3>
-            <h4>Subtitle</h4>
+            <div class="card"><a href="#cityty"><img src="/static/img/events/cityty.png" alt="City Tycoon"></a></div>            
+            <h3>City Tycoon</h3>
+            <h4>29 March</h4>
         </div>
 
         <div class="event-card">
-            <div class="card"><a href="#"><img src="/static/img/thumb.png" alt=""></a></div>            
-            <h3>Event Title</h3>
-            <h4>Subtitle</h4>
+            <div class="card"><a href="#ctflag"><img src="/static/img/events/ctflag.png" alt="Capture The Flag"></a></div>            
+            <h3>Capture The Flag</h3>
+            <h4>29 March</h4>
         </div>
 
         <div class="event-card">
-            <div class="card"><a href="#"><img src="/static/img/thumb.png" alt=""></a></div>            
-            <h3>Event Title</h3>
-            <h4>Subtitle</h4>
+            <div class="card"><a href="#debate"><img src="/static/img/events/debate.png" alt="Debate"></a></div>            
+            <h3>Debate</h3>
+            <h4>31 March</h4>
         </div>
 
         <div class="event-card">
-            <div class="card"><a href="#"><img src="/static/img/thumb.png" alt=""></a></div>            
-            <h3>Event Title</h3>
-            <h4>Subtitle</h4>
+            <div class="card"><a href="#facepn"><img src="/static/img/events/facepn.png" alt="Face Painting"></a></div>            
+            <h3>Face Painting</h3>
+            <h4>31 March</h4>
+        </div>
+
+        <div class="event-card">
+            <div class="card"><a href="#fscreen"><img src="/static/img/events/fscreen.png" alt="Film Screening"></a></div>            
+            <h3>Film Screening</h3>
+            <h4>29 March</h4>
+        </div>
+
+        <div class="event-card">
+            <div class="card"><a href="#fsshow"><img src="/static/img/events/fsshow.png" alt="Fashion Show"></a></div>            
+            <h3>Fashion Show</h3>
+            <h4>31 March</h4>
+        </div>
+
+        <div class="event-card">
+            <div class="card"><a href="#futsal"><img src="/static/img/events/futsal.png" alt="Futsal"></a></div>            
+            <h3>Futsal</h3>
+            <h4>30 and 31 March</h4>
+        </div>
+
+        <div class="event-card">
+            <div class="card"><a href="#gaming"><img src="/static/img/events/gaming.png" alt="Gaming"></a></div>            
+            <h3>Gaming</h3>
+            <h4>29 and 30 March</h4>
+        </div>
+
+        <div class="event-card">
+            <div class="card"><a href="gdance"><img src="/static/img/events/gdance.png" alt="Group Dance"></a></div>            
+            <h3>Group Dance</h3>
+            <h4>30 March</h4>
+        </div>
+
+        <div class="event-card">
+            <div class="card"><a href="#gnquiz"><img src="/static/img/events/gnquiz.png" alt="General Quiz"></a></div>            
+            <h3>General Quiz</h3>
+            <h4>30 March</h4>
+        </div>
+
+        <div class="event-card">
+            <div class="card"><a href="#gullyc"><img src="/static/img/events/gullyc.png" alt="Gully Cricket"></a></div>            
+            <h3>Gully Cricket</h3>
+            <h4>30 and 31 March</h4>
+        </div>
+
+        <div class="event-card">
+            <div class="card"><a href="#jengaa"><img src="/static/img/events/jengaa.png" alt="Jenga"></a></div>            
+            <h3>Jenga</h3>
+            <h4>30 and 31 March</h4>
+        </div>
+
+        <div class="event-card">
+            <div class="card"><a href="#jukebx"><img src="/static/img/events/jukebx.png" alt="Jukebox"></a></div>            
+            <h3>Jukebox</h3>
+            <h4>30 March</h4>
+        </div>
+
+        <div class="event-card">
+            <div class="card"><a href="#linefl"><img src="/static/img/events/linefl.png" alt="Line Follower"></a></div>            
+            <h3>Line Follower</h3>
+            <h4>31 March</h4>
+        </div>
+
+        <div class="event-card">
+            <div class="card"><a href="#mememk"><img src="/static/img/events/mememk.png" alt="Meme Making"></a></div>            
+            <h3>Meme Making</h3>
+            <h4>30 March</h4>
+        </div>
+
+        <div class="event-card">
+            <div class="card"><a href="#mschef"><img src="/static/img/events/mschef.png" alt="Masterchef"></a></div>            
+            <h3>Masterchef</h3>
+            <h4>30 March</h4>
+        </div>
+
+        <div class="event-card">
+            <div class="card"><a href="#murder"><img src="/static/img/events/murder.png" alt="Murder Mystery"></a></div>            
+            <h3>Murder Mystery</h3>
+            <h4>30 March</h4>
+        </div>
+
+        <div class="event-card">
+            <div class="card"><a href="#nnatak"><img src="/static/img/events/nnatak.png" alt="Nukkad Natak"></a></div>            
+            <h3>Nukkad Natak</h3>
+            <h4>30 and 31 March</h4>
+        </div>
+
+        <div class="event-card">
+            <div class="card"><a href="#photog"><img src="/static/img/events/photog.png" alt="Photography"></a></div>            
+            <h3>Photography</h3>
+            <h4>30 March</h4>
+        </div>
+
+        <div class="event-card">
+            <div class="card"><a href="#psfifa"><img src="/static/img/events/psfifa.png" alt="Fifa"></a></div>            
+            <h3>Fifa</h3>
+            <h4>29 March</h4>
+        </div>
+
+        <div class="event-card">
+            <div class="card"><a href="#pubgmb"><img src="/static/img/events/pubgmb.png" alt="PubG Mobile"></a></div>            
+            <h3>PubG Mobile</h3>
+            <h4>29 March</h4>
+        </div>
+
+        <div class="event-card">
+            <div class="card"><a href="#sdance"><img src="/static/img/events/sdance.png" alt="Solo Dance"></a></div>            
+            <h3>Solo Dance</h3>
+            <h4>29 March</h4>
+        </div>
+
+        <div class="event-card">
+            <div class="card"><a href="#tgowar"><img src="/static/img/events/tgowar.png" alt="Tug of War"></a></div>            
+            <h3>Tug of War</h3>
+            <h4>30 and 31 March</h4>
+        </div>
+
+        <div class="event-card">
+            <div class="card"><a href="#tmbola"><img src="/static/img/events/tmbola.png" alt="Tambola"></a></div>            
+            <h3>Tambola</h3>
+            <h4>30 and 31 March</h4>
+        </div>
+
+        <div class="event-card">
+            <div class="card"><a href="#tshunt"><img src="/static/img/events/tshunt.png" alt="Treasure Hunt"></a></div>            
+            <h3>Treasure Hunt</h3>
+            <h4>31 March</h4>
+        </div>
+
+        <div class="event-card">
+            <div class="card"><a href="#talent"><img src="/static/img/events/talent.png" alt="talent Hunt"></a></div>            
+            <h3>Talent Hunt</h3>
+            <h4>29 March</h4>
+        </div>
+
+        <div class="event-card">
+            <div class="card"><a href="#wrestle"><img src="/static/img/events/wrestle.png" alt="Arm Wrestling"></a></div>            
+            <h3>Arm Wrestling</h3>
+            <h4>30 and 31 March</h4>
         </div>
     </div>
 </section>
