--- a/homepage/events.hbs
+++ b/homepage/events.hbs
@@ -20,7 +20,12 @@
     <div class="events-container">
 
         <div class="event-card">
-            <div class="card"><a href="#nerdwd"><img src="/static/img/events/nerdwd.png" alt="Nerd Words"></a></div>            
+            <div class="card"><a href="#hackhl"><img src="/static/img/events/hackhl.png" alt="Hackathon"></a></div>            
+            <h3>Hackathon</h3>
+            <h4>29,30 and 31 March</h4>
+        </div>
+        <div class="event-card">
+            <div class="card"><a href="#nerdwd"><img src="/static/img/events/nerdwd.png" alt="Competitive Coding"></a></div>            
             <h3>Competitive Coding</h3>
             <h4>29,30 and 31 March</h4>
         </div>
