--- a/homepage/index.hbs
+++ b/homepage/index.hbs
@@ -75,18 +75,30 @@
                 
                 jointly brought together by the student IEEE JMI and ‘Some organisation’, aimed at celebrating student culture. 
                 
-                Along with giving students a diverse platform to put forth their talents and display their relevant skills, Xtacy aims towards creating a holistic 
-                experience that stays with the students forever. It is the cohesion of technical and cultural backgrounds, a movement that binds the two opposite 
+                Along with giving students a diverse platform to put forth their talents and display their relevant skills, 
+                Xtacy aims towards creating a holistic 
+                experience that stays with the students forever. It is the cohesion of technical and cultural backgrounds, 
+                a movement that binds the two opposite 
                 ends of the spectrum into one unified whole that hits the balance that is required for a techno-cultural fest.
                 
                 <br><br>
-                // video gif in bg
             </div>
         </div>
     </div>
 </section>
 
 <section>
+    {{!-- Slideshow of Title and Co-Sponsors --}}
+    <div class="sponsors">
+        <img src="/static/img/sponsors/AN.png">
+        <img src="/static/img/sponsors/Capital.png">
+        <img src="/static/img/sponsors/IEEE.png">
+        <img src="/static/img/sponsors/IES.png">
+        <img src="/static/img/sponsors/ISM.png">
+    </div>
+</section>
+
+{{!-- <section>
     {{!-- Call to Action --}}
     <div class="cta container">
         <div class="cta-title">
@@ -124,20 +136,7 @@
             </div>
         </div>
     </div>
-</section>
-
-<section>
-    {{!-- Slideshow of Title and Co-Sponsors --}}
-    <div class="sponsors">
-        <marquee behavior="scrolling" direction="left">
-            {{!-- <img src="/static/img/sponsors/AN.png">
-            <img src="/static/img/sponsors/Capital.png">
-            <img src="/static/img/sponsors/IEEE.png">
-            <img src="/static/img/sponsors/IES.png">
-            <img src="/static/img/sponsors/ISM.png"> --}}
-        </marquee>
-    </div>
-</section>
+</section> --}}
 
 {{!-- END PAGE CONTENT --}}
 
