--- a/homepage/reach.hbs
+++ b/homepage/reach.hbs
@@ -7,7 +7,7 @@
 <section>
     <div>
         <h1>Venue</h1>
-        <p>Xtacy will be held in the Jamia Millia Islamia campus, Faculty of Engineering and Technology on the 25th, 26th and 27th of March</p>
+        <p>Xtacy will be held in Jamia Millia Islamia, Faculty of Engineering and Technology on the 29th, 30th and 31st of March</p>
     </div>
 </section>
 
