Change about, contact pages

--- a/homepage/contact.hbs
+++ b/homepage/contact.hbs
@@ -33,8 +33,8 @@
 
         <div class="Details container">
             <h3>Or get in touch directly</h3>
-            <p><b>Email</b>  hello@xtacy.org</p>
-            <p><b>Phone</b>  +91 1234556789</p>
+            <p><b>Email</b> hello@xtacy.org</p>
+            <p><b>Phone</b>+91 96507 28130, +91 81738 24682</p>
         </div>
     </div>
 </section>
