--- a/homepage/partials/footer.hbs
+++ b/homepage/partials/footer.hbs
@@ -6,7 +6,7 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/events">Events</a></li>
-                <li><a href="/sponsors">Sponsors</a></li>
+                <li><a href="/">Sponsors</a></li>
             </ul>
         </div>
 
@@ -14,7 +14,6 @@
             <ul>
                 <li><a href="https://facebook.com/xtacyorg">Facebook</a></li>
                 <li><a href="https://instagram.com/xtacyorg">Instagram</a></li>
-                <li><a href="#">Twitter</a></li>
             </ul>
         </div>
 
