--- a/homepage/register.hbs
+++ b/homepage/register.hbs
@@ -11,7 +11,7 @@
             The registrations for Xtacy'19 have not started. Stay tuned!
         </p>
 
-        {{!--<button class="button solid" id="reg">REGISTER</button>   --}}
+        <button class="button solid" id="reg">REGISTER</button>   
         {{!-- <form action="#"> --}}
             {{!-- <div class="container center"> --}}
                 {{!-- <input id="name" type="text" class="textbox" placeholder="Name" autocomplete="given-name"> --}}
