--- a/homepage/register.hbs
+++ b/homepage/register.hbs
@@ -8,10 +8,14 @@
         <h2>Register</h2>
 
         <p>
-            The registrations for Xtacy'19 have not started. Stay tuned!
+            Xtacy offers a wide variety of experiences and events. Each event has it's own registration page, which you can make use of <a href='/events'>here</a>.<br>
+            However, if you wish to visit Xtacy'19, without registering for any event, you may click on the button below and register at no cost at all.<br>
+            <br>
+            <b> Please note that you will not to seperately register for any event you wish to participate in through the events page</b>
+            <br>
         </p>
 
-        {{!-- <button class="button solid" id="reg">REGISTER</button>   --}}
+        <button class="button solid" id="reg">REGISTER</button>   
         {{!-- <form action="#"> --}}
             {{!-- <div class="container center"> --}}
                 {{!-- <input id="name" type="text" class="textbox" placeholder="Name" autocomplete="given-name"> --}}
