--- a/homepage/events.hbs
+++ b/homepage/events.hbs
@@ -215,6 +215,16 @@
             <h3>Arm Wrestling</h3>
             <h4>30 and 31 March</h4>
         </div>
+        <div class="event-card">
+            <div class="card"><a href="#cwrite"><img src="/static/img/events/cwrite.webp" alt="Creative Writing"></a></div>            
+            <h3>Creative Writing</h3>
+            <h4>30 March</h4>
+        </div>
+        <div class="event-card">
+            <div class="card"><a href="#fortnt"><img src="/static/img/events/fortnt.webp" alt="Fortnite Face Off"></a></div>            
+            <h3>Fortnite Face Off</h3>
+            <h4>30 and 31 March</h4>
+        </div>
     </div>
 </section>
 
