--- a/homepage/events.hbs
+++ b/homepage/events.hbs
@@ -25,9 +25,9 @@
             <h4>29,30 and 31 March</h4>
         </div>
         <div class="event-card">
-            <div class="card"><a href="#nerdwd"><img src="/static/img/events/nerdwd.webp" alt="Competitive Coding"></a></div>            
-            <h3>Competitive Coding</h3>
-            <h4>29,30 and 31 March</h4>
+            <div class="card"><a href="#nerdwd"><img src="/static/img/events/nerdwd.webp" alt="Nerd Words"></a></div>            
+            <h3>Nerd Words</h3>
+            <h4>31 March</h4>
         </div>
 
         <div class="event-card">
