--- a/homepage/events.hbs
+++ b/homepage/events.hbs
@@ -5,29 +5,25 @@
 
 {{!-- START PAGE CONTENT --}}
 <section>
-    <div class="events-container">
+  <!--  <div class="events-container">
         <div class="event-banner">
             <div class="banner">
                 <a href="#hackhl">
                     <img src="/static/img/events/hackhl.webp">
                 </a>
             </div>
-        </div>
+        </div>  -->
+        <h1 class="title">Events</h1>
     </div>
 </section>
 
 <section>
     <div class="events-container">
 
-        <div class="event-card">
-            <div class="card"><a href="#hackhl"><img src="/static/img/events/hackhl.webp" alt="Hackathon"></a></div>            
-            <h3>Hackathon</h3>
-            <h4>29,30 and 31 March</h4>
-        </div>
-        <div class="event-card">
-            <div class="card"><a href="#nerdwd"><img src="/static/img/events/nerdwd.webp" alt="Nerd Words"></a></div>            
-            <h3>Nerd Words</h3>
-            <h4>31 March</h4>
+      <div class="event-card">
+            <div class="card"><a href="#wrestle"><img src="/static/img/events/wrestle.webp" alt="Arm Wrestling"></a></div>            
+            <h3>Arm Wrestling</h3>
+            <h4>30 and 31 March</h4>
         </div>
 
         <div class="event-card">
@@ -38,55 +34,25 @@
 
         <div class="event-card">
             <div class="card"><a href="#bridge"><img src="/static/img/events/bridge.webp" alt="Bridge Follower"></a></div>            
-            <h3>Bridge Follower</h3>
+            <h3>Bridge Building</h3>
             <h4>29 March</h4>
         </div>
 
-        <div class="event-card">
-            <div class="card"><a href="#caddds"><img src="/static/img/events/caddds.webp" alt="Cadd Designing"></a></div>            
-            <h3>Cadd Designing</h3>
-            <h4>30 March</h4>
-        </div>
-
-        <div class="event-card">
-            <div class="card"><a href="#casino"><img src="/static/img/events/casino.webp" alt="Hasino Ka Casino"></a></div>            
-            <h3>Hasiona Ka Casino</h3>
-            <h4>30 and 31 March</h4>
-        </div>
-
-        <div class="event-card">
+         <div class="event-card">
             <div class="card"><a href="#cityty"><img src="/static/img/events/cityty.webp" alt="City Tycoon"></a></div>            
             <h3>City Tycoon</h3>
             <h4>29 March</h4>
         </div>
 
-        <div class="event-card">
-            <div class="card"><a href="#ctflag"><img src="/static/img/events/ctflag.webp" alt="Capture The Flag"></a></div>            
-            <h3>Capture The Flag</h3>
-            <h4>29 March</h4>
-        </div>
-
-        <div class="event-card">
-            <div class="card"><a href="#debate"><img src="/static/img/events/debate.webp" alt="Debate"></a></div>            
-            <h3>Debate</h3>
-            <h4>31 March</h4>
-        </div>
+    <!--   <div class="event-card">
+            <div class="card"><a href="#casino"><img src="/static/img/events/casino.webp" alt="Hasino Ka Casino"></a></div>            
+            <h3>Hasino Ka Casino</h3>
+            <h4>30 and 31 March</h4>            
+        </div>          -->
 
         <div class="event-card">
             <div class="card"><a href="#facepn"><img src="/static/img/events/facepn.webp" alt="Face Painting"></a></div>            
             <h3>Face Painting</h3>
-            <h4>31 March</h4>
-        </div>
-
-        <div class="event-card">
-            <div class="card"><a href="#fscreen"><img src="/static/img/events/fscreen.webp" alt="Film Screening"></a></div>            
-            <h3>Film Screening</h3>
-            <h4>29 March</h4>
-        </div>
-
-        <div class="event-card">
-            <div class="card"><a href="#fsshow"><img src="/static/img/events/fsshow.webp" alt="Fashion Show"></a></div>            
-            <h3>Fashion Show</h3>
             <h4>31 March</h4>
         </div>
 
@@ -97,30 +63,12 @@
         </div>
 
         <div class="event-card">
-            <div class="card"><a href="#gaming"><img src="/static/img/events/gaming.webp" alt="Gaming"></a></div>            
-            <h3>Gaming</h3>
-            <h4>29 and 30 March</h4>
-        </div>
-
-        <div class="event-card">
-            <div class="card"><a href="#gdance"><img src="/static/img/events/gdance.webp" alt="Group Dance"></a></div>            
-            <h3>Group Dance</h3>
-            <h4>30 March</h4>
-        </div>
-
-        <div class="event-card">
-            <div class="card"><a href="#gnquiz"><img src="/static/img/events/gnquiz.webp" alt="General Quiz"></a></div>            
-            <h3>General Quiz</h3>
-            <h4>30 March</h4>
-        </div>
-
-        <div class="event-card">
             <div class="card"><a href="#gullyc"><img src="/static/img/events/gullyc.webp" alt="Gully Cricket"></a></div>            
             <h3>Gully Cricket</h3>
             <h4>30 and 31 March</h4>
         </div>
 
-        <div class="event-card">
+    <!--    <div class="event-card">
             <div class="card"><a href="#jengaa"><img src="/static/img/events/jengaa.webp" alt="Jenga"></a></div>            
             <h3>Jenga</h3>
             <h4>30 and 31 March</h4>
@@ -130,19 +78,13 @@
             <div class="card"><a href="#jukebx"><img src="/static/img/events/jukebx.webp" alt="Jukebox"></a></div>            
             <h3>Jukebox</h3>
             <h4>30 March</h4>
-        </div>
-
-        <div class="event-card">
-            <div class="card"><a href="#linefl"><img src="/static/img/events/linefl.webp" alt="Line Follower"></a></div>            
-            <h3>Line Follower</h3>
-            <h4>31 March</h4>
-        </div>
+        </div>              
 
         <div class="event-card">
             <div class="card"><a href="#mememk"><img src="/static/img/events/mememk.webp" alt="Meme Making"></a></div>            
             <h3>Meme Making</h3>
             <h4>30 March</h4>
-        </div>
+        </div>      -->
 
         <div class="event-card">
             <div class="card"><a href="#mschef"><img src="/static/img/events/mschef.webp" alt="Masterchef"></a></div>            
@@ -155,36 +97,12 @@
             <h3>Murder Mystery</h3>
             <h4>30 March</h4>
         </div>
-
-        <div class="event-card">
-            <div class="card"><a href="#nnatak"><img src="/static/img/events/nnatak.webp" alt="Nukkad Natak"></a></div>            
-            <h3>Nukkad Natak</h3>
-            <h4>30 and 31 March</h4>
-        </div>
-
-        <div class="event-card">
+        
+    <!--    <div class="event-card">
             <div class="card"><a href="#photog"><img src="/static/img/events/photog.webp" alt="Photography"></a></div>            
             <h3>Photography</h3>
             <h4>30 March</h4>
-        </div>
-
-        <div class="event-card">
-            <div class="card"><a href="#psfifa"><img src="/static/img/events/psfifa.webp" alt="Fifa"></a></div>            
-            <h3>Fifa</h3>
-            <h4>29 March</h4>
-        </div>
-
-        <div class="event-card">
-            <div class="card"><a href="#pubgmb"><img src="/static/img/events/pubgmb.webp" alt="PubG Mobile"></a></div>            
-            <h3>PubG Mobile</h3>
-            <h4>29 March</h4>
-        </div>
-
-        <div class="event-card">
-            <div class="card"><a href="#sdance"><img src="/static/img/events/sdance.webp" alt="Solo Dance"></a></div>            
-            <h3>Solo Dance</h3>
-            <h4>29 March</h4>
-        </div>
+        </div>      -->
 
         <div class="event-card">
             <div class="card"><a href="#tgowar"><img src="/static/img/events/tgowar.webp" alt="Tug of War"></a></div>            
@@ -203,29 +121,122 @@
             <h3>Treasure Hunt</h3>
             <h4>31 March</h4>
         </div>
-
-        <div class="event-card">
-            <div class="card"><a href="#talent"><img src="/static/img/events/talent.webp" alt="talent Hunt"></a></div>            
-            <h3>Talent Hunt</h3>
+    </div>    
+    <h2 class="title"> Tech Events</h2>
+    <div class="events-container">    
+         <div class="event-card">
+            <div class="card"><a href="#caddds"><img src="/static/img/events/caddds.webp" alt="Cadd Designing"></a></div>            
+            <h3>Cadd Designing</h3>
+            <h4>30 March</h4>
+        </div>
+         <div class="event-card">
+            <div class="card"><a href="#ctflag"><img src="/static/img/events/ctflag.webp" alt="Capture The Flag"></a></div>            
+            <h3>Capture The Flag</h3>
             <h4>29 March</h4>
         </div>
-
         <div class="event-card">
-            <div class="card"><a href="#wrestle"><img src="/static/img/events/wrestle.webp" alt="Arm Wrestling"></a></div>            
-            <h3>Arm Wrestling</h3>
+            <div class="card"><a href="#crelay"><img src="/static/img/events/crelay.webp" alt="Code Relay"></a></div>            
+            <h3>Code Relay</h3>
+            <h4>30 March</h4>
+        </div>
+        <div class="event-card">
+            <div class="card"><a href="#hackhl"><img src="/static/img/events/hackhl.webp" alt="Hackathon"></a></div>            
+            <h3>Hackathon</h3>
+            <h4>29,30 and 31 March</h4>
+        </div>
+        <div class="event-card">
+            <div class="card"><a href="#linefl"><img src="/static/img/events/linefl.webp" alt="Line Follower"></a></div>            
+            <h3>Line Follower</h3>
+            <h4>31 March</h4>
+        </div>
+        <div class="event-card">
+            <div class="card"><a href="#nerdwd"><img src="/static/img/events/nerdwd.webp" alt="Nerd Words"></a></div>            
+            <h3>Nerd Words</h3>
+            <h4>31 March</h4>
+        </div>
+       
+       <div class="event-card">
+            <div class="card"><a href="#psfifa"><img src="/static/img/events/psfifa.webp" alt="Fifa"></a></div>            
+            <h3>Fifa</h3>
+            <h4>29 March</h4>
+        </div>
+       <div class="event-card">
+            <div class="card"><a href="#fortnt"><img src="/static/img/events/fortnt.webp" alt="Fortnite Face Off"></a></div>            
+            <h3>Fortnite Face Off</h3>
             <h4>30 and 31 March</h4>
         </div>
+        
+        <div class="event-card">
+            <div class="card"><a href="#gaming"><img src="/static/img/events/gaming.webp" alt="Gaming"></a></div>            
+            <h3>Gaming</h3>
+            <h4>29 and 30 March</h4>
+        </div>
+        
+    <!--    <div class="event-card">
+            <div class="card"><a href="#pubgmb"><img src="/static/img/events/pubgmb.webp" alt="PubG Mobile"></a></div>            
+            <h3>PubG Mobile</h3>
+            <h4>29 March</h4>
+        </div>      -->
+    </div>
+    </div>
+        <h2 class="title">Cultural Events</h2>
+    <div class="events-container">
         <div class="event-card">
             <div class="card"><a href="#cwrite"><img src="/static/img/events/cwrite.webp" alt="Creative Writing"></a></div>            
             <h3>Creative Writing</h3>
             <h4>30 March</h4>
         </div>
+
         <div class="event-card">
-            <div class="card"><a href="#fortnt"><img src="/static/img/events/fortnt.webp" alt="Fortnite Face Off"></a></div>            
-            <h3>Fortnite Face Off</h3>
+            <div class="card"><a href="#debate"><img src="/static/img/events/debate.webp" alt="Debate"></a></div>            
+            <h3>That's Debatable</h3>
+            <h4>31 March</h4>
+        </div>
+
+        <div class="event-card">
+            <div class="card"><a href="#fsshow"><img src="/static/img/events/fsshow.webp" alt="Fashion Show"></a></div>            
+            <h3>Tarz-E-Libas</h3>
+            <h4>31 March</h4>
+        </div>
+
+    <!--    <div class="event-card">
+            <div class="card"><a href="#fscreen"><img src="/static/img/events/fscreen.webp" alt="Film Screening"></a></div>            
+            <h3>Film Screening</h3>
+            <h4>29 March</h4>
+        </div>      -->
+    
+        <div class="event-card">
+            <div class="card"><a href="#gdance"><img src="/static/img/events/gdance.webp" alt="Group Dance"></a></div>            
+            <h3>Nritya</h3>
+            <h4>30 March</h4>
+        </div>
+
+        <div class="event-card">
+            <div class="card"><a href="#gnquiz"><img src="/static/img/events/gnquiz.webp" alt="General Quiz"></a></div>            
+            <h3>General Quiz</h3>
+            <h4>30 March</h4>
+        </div>
+
+    <!--    <div class="event-card">
+            <div class="card"><a href="#nnatak"><img src="/static/img/events/nnatak.webp" alt="Nukkad Natak"></a></div>            
+            <h3>Nukkad Natak</h3>
             <h4>30 and 31 March</h4>
+        </div>      -->
+
+         <div class="event-card">
+            <div class="card"><a href="#sdance"><img src="/static/img/events/sdance.webp" alt="Solo Dance"></a></div>            
+            <h3>Moves and Grooves</h3>
+            <h4>29 March</h4>
+        </div>
+          <div class="event-card">
+            <div class="card"><a href="#talent"><img src="/static/img/events/talent.webp" alt="talent Hunt"></a></div>            
+            <h3>Talent Hunt</h3>
+            <h4>29 March</h4>
         </div>
     </div>
+
+    
+       
 </section>
 
 {{!-- EVENT PROMO DRAWER --}}
@@ -292,7 +303,6 @@
                                 window.location = '/register/main?int=' + data.type + '&evt=' + eventId;    
                         }   
                         document.getElementById("button_aux").onclick = () => {
-                            console.log("****")
                             window.location = '/event/' + eventId;  
                         }
                     }
