--- a/homepage/events.hbs
+++ b/homepage/events.hbs
@@ -155,6 +155,12 @@
             <h4>31 March</h4>
         </div>
        
+        <div class="event-card">
+            <div class="card"><a href="#csgopc"><img src="/static/img/events/csgopc.webp" alt="Gaming"></a></div>            
+            <h3>CSGO</h3>
+            <h4>29 March</h4>
+        </div>
+
        <div class="event-card">
             <div class="card"><a href="#psfifa"><img src="/static/img/events/psfifa.webp" alt="Fifa"></a></div>            
             <h3>Fifa</h3>
@@ -166,11 +172,7 @@
             <h4>30 and 31 March</h4>
         </div>
         
-        <div class="event-card">
-            <div class="card"><a href="#gaming"><img src="/static/img/events/gaming.webp" alt="Gaming"></a></div>            
-            <h3>Gaming</h3>
-            <h4>29 and 30 March</h4>
-        </div>
+       
         
     <!--    <div class="event-card">
             <div class="card"><a href="#pubgmb"><img src="/static/img/events/pubgmb.webp" alt="PubG Mobile"></a></div>            
