--- a/homepage/static/css/Events.css
+++ b/homepage/static/css/Events.css
@@ -197,9 +197,18 @@ img[class~="mobile"] {
     from { opacity: 0 } to { opacity: 0.6 }
 }
 
-.poster {
-    width : 85vh;
-    height: auto;
+@media (min-width: 800px) {
+    .poster {
+        width : 85vh;
+        height: auto;
+    }
+}
+@media (max-width: 800px)
+{
+    .poster {
+        width:60vh;
+        height:auto;
+    }
 }
 
 /* === Close Button === */
