--- a/homepage/register.hbs
+++ b/homepage/register.hbs
@@ -11,7 +11,7 @@
             Xtacy offers a wide variety of experiences and events. Each event has it's own registration page, which you can make use of <a href='/events'>here</a>.<br>
             However, if you wish to visit Xtacy'19, without registering for any event, you may click on the button below and register at no cost at all.<br>
             <br>
-            <b> Please note that you will not to seperately register for any event you wish to participate in through the events page</b>
+            <b> Please note that you will need to seperately register for any event you wish to participate in through the events page</b>
             <br>
         </p>
 
