--- a/homepage/static/css/Events.css
+++ b/homepage/static/css/Events.css
@@ -199,14 +199,14 @@ img[class~="mobile"] {
 
 @media (min-width: 800px) {
     .poster {
-        width : 85vh;
+        width : 50vw;
         height: auto;
     }
 }
 @media (max-width: 800px)
 {
     .poster {
-        width:60vh;
+        width:90vw;
         height:auto;
     }
 }
