--- a/homepage/index.hbs
+++ b/homepage/index.hbs
@@ -117,6 +117,27 @@
             <img src="/static/img/sponsors/madeeasy.png">
             <img src="/static/img/sponsors/orchid.png">
             <img src="/static/img/sponsors/techexp.png">
+
+            <div>
+                <img src="/static/img/sponsors/collegedunia.png">
+                <p>Social Media Partner</p>
+            </div>
+            <div>
+                <img src="/static/img/sponsors/carhp.png">
+                <p>Social Media Partner</p>
+            </div>
+            <div>
+                <img src="/static/img/sponsors/zoutons.png">
+                <p>Coupons Partner</p>
+            </div>
+            <div>
+                <img src="/static/img/sponsors/dcop1.png">
+                <p>Photoghraphy Partner</p>
+            </div>
+            <div>
+                <img src="/static/img/sponsors/smaaash.png">
+                <p>Gaming Partner</p>
+            </div>
         </div>
     </div>
 </section>
