--- a/homepage/events.hbs
+++ b/homepage/events.hbs
@@ -5,15 +5,16 @@
 
 {{!-- START PAGE CONTENT --}}
 <section>
-  <!--  <div class="events-container">
+    <h1 class="title">Events</h1>
+    <div class="events-container">
         <div class="event-banner">
             <div class="banner">
-                <a href="#hackhl">
-                    <img src="/static/img/events/hackhl.webp">
+                <a href="#kunalk">
+                    <img src="/static/img/events/kunalk.webp">
                 </a>
             </div>
-        </div>  -->
-        <h1 class="title">Events</h1>
+        </div>  
+        
     </div>
 </section>
 
