--- a/mail/templates/competeRegConfirmation.html
+++ b/mail/templates/competeRegConfirmation.html
@@ -52,7 +52,7 @@ padding: 1em;">
             font-weight: 800;
             margin: 1em 0 0.5em 0;
             text-align: center;">How to Reach</p>
-            Reaching Jamia Millia Islamia is pretty simple if you arent a moron.
+            Reaching Jamia Millia Islamia is very simple.
             Entry to the festival venue is from <b>Gate 13 (Ansari Auditorium).</b>
             Our event staff will be present at the venue to guide you. More information 
             is available on our 
