--- a/homepage/register.hbs
+++ b/homepage/register.hbs
@@ -15,7 +15,7 @@
             <br>
         </p>
 
-        <button class="button solid" id="reg">REGISTER</button>   
+        {{!-- <button class="button solid" id="reg">REGISTER</button> --}}
         {{!-- <form action="#"> --}}
             {{!-- <div class="container center"> --}}
                 {{!-- <input id="name" type="text" class="textbox" placeholder="Name" autocomplete="given-name"> --}}
