--- a/homepage/index.hbs
+++ b/homepage/index.hbs
@@ -118,15 +118,21 @@
             <img src="/static/img/sponsors/techexp.png">
 
             <div>
-                <img src="/static/img/sponsors/collegedunia.png">
+                <a href = "https://collegedunia.com/">
+                    <img src="/static/img/sponsors/collegedunia.png">
+                </a>
                 <p>Social Media Partner</p>
             </div>
             <div>
-                <img src="/static/img/sponsors/carhp.png">
+                <a href="https://www.carhp.com/">
+                    <img src="/static/img/sponsors/carhp.png">
+                </a>
                 <p>Social Media Partner</p>
             </div>
             <div>
-                <img src="/static/img/sponsors/zoutons.png">
+                <a href = "https://zoutons.com/in">
+                    <img src="/static/img/sponsors/zoutons.png">
+                </a>
                 <p>Coupons Partner</p>
             </div>
             <div>
