--- a/homepage/index.hbs
+++ b/homepage/index.hbs
@@ -116,6 +116,7 @@
             <img src="/static/img/sponsors/madeeasy.png">
             <img src="/static/img/sponsors/nissan.png">
             <img src="/static/img/sponsors/techexp.png">
+            <img src="/static/img/sponsors/dveins.png">
 
             <div>
                 <a href = "https://collegedunia.com/">
