--- a/homepage/index.hbs
+++ b/homepage/index.hbs
@@ -82,7 +82,6 @@
                 It is a Polaroid in the age of film, a  3D Print in the age of cardboard cutouts. Pondering and discovering, curiosity and technological advances. <br>
                 <br>
                 It is a synonym to describe the ever expanding, ever shifting, ever thinking and ever growing universe. <br>
-                
                 <br><br>
             </div>
         </div>
@@ -143,6 +142,10 @@
             <div>
                 <img src="/static/img/sponsors/smaaash.png">
                 <p>Gaming Partner</p>
+            </div>
+            <div>
+                <img src="/static/img/sponsors/dv.jpedg">
+                <p>Mobile Gaming Partner</p>
             </div>
         </div>
     </div>
