--- a/homepage/index.hbs
+++ b/homepage/index.hbs
@@ -144,7 +144,7 @@
                 <p>Gaming Partner</p>
             </div>
             <div>
-                <img src="/static/img/sponsors/dv.jpedg">
+                <img src="/static/img/sponsors/dv.jpeg">
                 <p>Mobile Gaming Partner</p>
             </div>
         </div>
