--- a/homepage/index.hbs
+++ b/homepage/index.hbs
@@ -6,6 +6,11 @@
 
 {{> header }}
 
+
+    <!-- Xtacy by FET JMI &copy; 2019 -->
+    <!-- Developed by Alisamar Husain -->
+
+
 {{!-- START PAGE CONTENT --}}
 <section class="grid">
     {{!-- Front Page - Above Fold --}}
