--- a/homepage/index.hbs
+++ b/homepage/index.hbs
@@ -7,7 +7,7 @@
 {{> header }}
 
 
-    <!-- Xtacy by FET JMI &copy; 2019 -->
+    <!-- Xtacy by FET JMI (c) 2019 -->
     <!-- Developed by Alisamar Husain -->
 
 
