--- a/homepage/events.hbs
+++ b/homepage/events.hbs
@@ -13,6 +13,8 @@
                     <img src="/static/img/events/kunalk.webp">
                 </a>
             </div>
+		<h3>KUNAL KAMRA</h3>
+                <h4>30th March</h4>
         </div>  
         
     </div>
